# fastcashflow

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: api.rst  assumptions-format.md  basis-format.md  concepts.md  conf.py  design-decisions.md  generate_images.py  generate_sheet_images.py  getting-started.md  index.md  measurement-paths.md  naming-conventions.md  start.md
docs/_static/: custom.css  ga-consent.js  ga-events.js
docs/_templates/: navbar-logo.html
docs/cookbook/: 01-term-life-modified.md  01-term-life.md  11-validation.md  12-benefit-patterns.md  index.md
docs/en/: api.rst  concepts.md  getting-started.md  index.md
docs/ko/: index.md
docs/solvency/: 01-asset-portfolio.md  02-market-risk.md  03-available-capital.md  04-required-capital.md  05-solvency-ratio.md  06-mass-lapse-reinsurance.md  07-disclosure.md  index.md
docs/tutorial/: 01-ifrs17.md  01-what-is-ifrs17.md  02-bel-ra-csm.md  03-cashflow-basis.md  04-how-the-engine-runs.md  05-bel-calculation.md  06-risk-adjustment.md  07-csm.md  08-hands-on.md  09-in-practice.md  09-paa.md  10-in-practice-2.md  10-vfa.md  10-why-fast.md  11-in-practice.md  11-why-fast.md  12-in-practice-2.md  (+3 more)
examples/: benchmark.py  models.py  phase0_term.py  portfolio.py  pricing.py  quickstart.py  reinsurance.py  reporting.py  sample_policies.csv  stochastic.py  stochastic_solvency.py  transition.py  tvog.py  vfa.py  worked_example.py
tests/: _ul_oracle_snapshot.json  conftest.py  test_ae_factor.py  test_age_shift.py  test_alm.py  test_annual_frequency.py  test_annuity_forms.py  test_assets.py  test_axis_flex.py  test_benefit_cap.py  test_benefit_escalation.py  test_close_pack.py  test_closing.py  test_compression.py  test_contract_boundary.py  test_coverage.py  test_coverage_rules.py  test_coverage_unit_discount.py  test_current_estimate.py  test_curves.py  test_d0_guards.py  test_dict_basis_entry_points.py  test_disability.py  test_disclosure.py  test_discounting.py  test_doc_exec.py  test_embedded_value.py  test_esg.py  test_examples.py  test_expense_items.py  test_expense_rows.py  test_footguns.py  test_gic_grouping.py  test_gmm_handcalc.py  test_gmm_settle.py  test_gmm_settle_experience.py  test_gmm_settle_investment_component.py  test_gmm_settle_lc_allocation.py  test_gmm_settle_lic.py  test_gmm_settle_premium_experience.py  (+113 more)
(+213 files in other folders)
