[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastcashflow"
version = "0.1.0.dev1"
description = "Fast IFRS 17 measurement engine -- GMM / PAA / VFA cash flow projection (BEL, RA, CSM)"
readme = "README.md"
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Seokhoon Joo" }]
keywords = [
    "IFRS 17", "GMM", "BEL", "risk adjustment", "CSM",
    "actuarial", "cashflow projection", "insurance", "life", "health",
]
dependencies = ["numpy>=1.24", "numba>=0.59", "polars>=1.0", "openpyxl>=3.1", "matplotlib>=3.7"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage      = "https://fastcashflow.org"
Documentation = "https://docs.fastcashflow.org"
Repository    = "https://github.com/seokhoonj/fastcashflow"
Issues        = "https://github.com/seokhoonj/fastcashflow/issues"

[project.optional-dependencies]
dev = ["pytest"]
docs = ["sphinx>=7.0", "pydata-sphinx-theme", "myst-parser>=2.0", "sphinx-design", "sphinx-copybutton", "sphinxcontrib-mermaid"]

[tool.hatch.build.targets.wheel]
packages = ["src/fastcashflow"]
